--- a/HDT.ipynb
+++ b/HDT.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -107,8 +107,6 @@
     "        \n",
     "\n",
     "    def forward(self, x):\n",
-    "\n",
-    "\n",
     "        x = self.fc1(x)\n",
     "        x = self.relu(x)\n",
     "        x = self.fc2(x)\n",
@@ -133,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,23 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Época [10/100], Train Loss: 0.3580, Val Loss: 0.3220\n",
-      "Época [20/100], Train Loss: 0.1759, Val Loss: 0.1763\n",
-      "Época [30/100], Train Loss: 0.1235, Val Loss: 0.1471\n",
-      "Época [40/100], Train Loss: 0.1386, Val Loss: 0.1023\n",
-      "Época [50/100], Train Loss: 0.1241, Val Loss: 0.0907\n",
-      "Época [60/100], Train Loss: 0.1162, Val Loss: 0.3257\n",
-      "Época [70/100], Train Loss: 0.1073, Val Loss: 0.1960\n",
-      "Época [80/100], Train Loss: 0.0829, Val Loss: 0.0893\n",
-      "Época [90/100], Train Loss: 0.1036, Val Loss: 0.1378\n",
-      "Época [100/100], Train Loss: 0.1268, Val Loss: 0.0997\n"
+      "Época [10/100], Train Loss: 0.3703, Value Loss: 0.3867\n",
+      "Época [20/100], Train Loss: 0.1978, Value Loss: 0.1815\n",
+      "Época [30/100], Train Loss: 0.1638, Value Loss: 0.1296\n",
+      "Época [40/100], Train Loss: 0.1158, Value Loss: 0.1942\n",
+      "Época [50/100], Train Loss: 0.1323, Value Loss: 0.0958\n",
+      "Época [60/100], Train Loss: 0.1000, Value Loss: 0.0897\n",
+      "Época [70/100], Train Loss: 0.1170, Value Loss: 0.0874\n",
+      "Época [80/100], Train Loss: 0.1092, Value Loss: 0.2080\n",
+      "Época [90/100], Train Loss: 0.0950, Value Loss: 0.1579\n",
+      "Época [100/100], Train Loss: 0.0882, Value Loss: 0.2932\n"
      ]
     }
    ],
@@ -204,38 +202,28 @@
     "    \n",
     "    # Imprimir información de entrenamiento y validación\n",
     "    if (epoch + 1) % 10 == 0:\n",
-    "        print(f'Época [{epoch+1}/{num_epochs}], Train Loss: {train_loss:.4f}, Val Loss: {val_loss:.4f}')\n"
+    "        print(f'Época [{epoch+1}/{num_epochs}], Train Loss: {train_loss:.4f}, Value Loss: {val_loss:.4f}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Contreras GP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torch\\nn\\modules\\loss.py:536: UserWarning: Using a target size (torch.Size([4, 1])) that is different to the input size (torch.Size([4, 4])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
-      "c:\\Users\\Contreras GP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torch\\nn\\modules\\loss.py:536: UserWarning: Using a target size (torch.Size([2, 1])) that is different to the input size (torch.Size([2, 4])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [10/100], Train Loss: 0.0482, Test Loss: 0.0518\n",
-      "Epoch [20/100], Train Loss: 0.0445, Test Loss: 0.0482\n",
-      "Epoch [30/100], Train Loss: 0.0436, Test Loss: 0.0468\n",
-      "Epoch [40/100], Train Loss: 0.0400, Test Loss: 0.0566\n",
-      "Epoch [50/100], Train Loss: 0.0412, Test Loss: 0.0439\n",
-      "Epoch [60/100], Train Loss: 0.0401, Test Loss: 0.0628\n",
-      "Epoch [70/100], Train Loss: 0.0425, Test Loss: 0.0449\n",
-      "Epoch [80/100], Train Loss: 0.0388, Test Loss: 0.0437\n",
-      "Epoch [90/100], Train Loss: 0.0411, Test Loss: 0.0435\n",
-      "Epoch [100/100], Train Loss: 0.0396, Test Loss: 0.0434\n"
+      "Epoch [10/100], Train Loss: 0.0539, Value Loss: 0.0549\n",
+      "Epoch [20/100], Train Loss: 0.0446, Value Loss: 0.0451\n",
+      "Epoch [30/100], Train Loss: 0.0400, Value Loss: 0.0490\n",
+      "Epoch [40/100], Train Loss: 0.0400, Value Loss: 0.0428\n",
+      "Epoch [50/100], Train Loss: 0.0375, Value Loss: 0.0428\n",
+      "Epoch [60/100], Train Loss: 0.0368, Value Loss: 0.0432\n",
+      "Epoch [70/100], Train Loss: 0.0361, Value Loss: 0.0424\n",
+      "Epoch [80/100], Train Loss: 0.0377, Value Loss: 0.0418\n",
+      "Epoch [90/100], Train Loss: 0.0355, Value Loss: 0.0419\n",
+      "Epoch [100/100], Train Loss: 0.0358, Value Loss: 0.0418\n"
      ]
     }
    ],
@@ -279,38 +267,28 @@
     "    \n",
     "    # Print training and validation information\n",
     "    if (epoch + 1) % 10 == 0:\n",
-    "        print(f'Epoch [{epoch+1}/{num_epochs}], Train Loss: {train_loss:.4f}, Test Loss: {test_loss:.4f}')"
+    "        print(f'Epoch [{epoch+1}/{num_epochs}], Train Loss: {train_loss:.4f}, Value Loss: {test_loss:.4f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Contreras GP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torch\\nn\\modules\\loss.py:928: UserWarning: Using a target size (torch.Size([4, 1])) that is different to the input size (torch.Size([4, 4])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.smooth_l1_loss(input, target, reduction=self.reduction, beta=self.beta)\n",
-      "c:\\Users\\Contreras GP\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torch\\nn\\modules\\loss.py:928: UserWarning: Using a target size (torch.Size([2, 1])) that is different to the input size (torch.Size([2, 4])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.smooth_l1_loss(input, target, reduction=self.reduction, beta=self.beta)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [10/100], Train Loss: 0.0193, Test Loss: 0.0240\n",
-      "Epoch [20/100], Train Loss: 0.0193, Test Loss: 0.0220\n",
-      "Epoch [30/100], Train Loss: 0.0190, Test Loss: 0.0227\n",
-      "Epoch [40/100], Train Loss: 0.0190, Test Loss: 0.0243\n",
-      "Epoch [50/100], Train Loss: 0.0189, Test Loss: 0.0235\n",
-      "Epoch [60/100], Train Loss: 0.0184, Test Loss: 0.0218\n",
-      "Epoch [70/100], Train Loss: 0.0189, Test Loss: 0.0229\n",
-      "Epoch [80/100], Train Loss: 0.0186, Test Loss: 0.0227\n",
-      "Epoch [90/100], Train Loss: 0.0192, Test Loss: 0.0224\n",
-      "Epoch [100/100], Train Loss: 0.0186, Test Loss: 0.0244\n"
+      "Epoch [10/100], Train Loss: 0.0175, Value Loss: 0.0236\n",
+      "Epoch [20/100], Train Loss: 0.0176, Value Loss: 0.0208\n",
+      "Epoch [30/100], Train Loss: 0.0173, Value Loss: 0.0245\n",
+      "Epoch [40/100], Train Loss: 0.0177, Value Loss: 0.0225\n",
+      "Epoch [50/100], Train Loss: 0.0172, Value Loss: 0.0219\n",
+      "Epoch [60/100], Train Loss: 0.0170, Value Loss: 0.0222\n",
+      "Epoch [70/100], Train Loss: 0.0175, Value Loss: 0.0210\n",
+      "Epoch [80/100], Train Loss: 0.0169, Value Loss: 0.0208\n",
+      "Epoch [90/100], Train Loss: 0.0169, Value Loss: 0.0207\n",
+      "Epoch [100/100], Train Loss: 0.0170, Value Loss: 0.0211\n"
      ]
     }
    ],
@@ -354,7 +332,7 @@
     "    \n",
     "    # Print training and validation information\n",
     "    if (epoch + 1) % 10 == 0:\n",
-    "        print(f'Epoch [{epoch+1}/{num_epochs}], Train Loss: {train_loss:.4f}, Test Loss: {test_loss:.4f}')"
+    "        print(f'Epoch [{epoch+1}/{num_epochs}], Train Loss: {train_loss:.4f}, Value Loss: {test_loss:.4f}')"
    ]
   }
  ],
